<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.addstory.AddStoryActivity">

    <!-- Preview Image -->
    <ImageView
        android:id="@+id/iv_preview"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:contentDescription="@string/image_preview"
        android:scaleType="fitCenter"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="16dp" />

    <!-- Select Image Button -->
    <Button
        android:id="@+id/btn_select_image"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/select_image"
        app:layout_constraintTop_toBottomOf="@id/iv_preview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp" />

    <!-- Description Field -->
    <EditText
        android:id="@+id/ed_add_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/add_description"
        android:inputType="textMultiLine"
        android:minHeight="100dp"
        android:gravity="top|start"
        android:background="@drawable/edit_text_background"
        app:layout_constraintTop_toBottomOf="@id/btn_select_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <!-- Add Story Button -->
    <Button
        android:id="@+id/button_add"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/upload_story"
        app:layout_constraintTop_toBottomOf="@id/ed_add_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
